# tbai_ros

./: .gitignore  .gitmodules  README.md  justfile
tbai/: CMakeLists.txt
tbai_ros_context_aware/: CMakeLists.txt
tbai_ros_context_aware/config/: controllers.info  default_config.yaml
tbai_ros_context_aware/launch/: anymal_d.rviz  simple.launch
tbai_ros_context_aware/src/: simple.cpp
tbai_ros_g1/: CMakeLists.txt  package.xml
tbai_ros_g1/config/: g1_rl.yaml
tbai_ros_g1/include/tbai_ros_g1/: G1BeyondMimicController.hpp  G1Constants.hpp  G1MimicController.hpp  G1RLController.hpp  G1StaticController.hpp  MotionLoader.hpp
tbai_ros_g1/launch/: g1_mujoco.launch
tbai_ros_g1/scripts/: g1_virtual_joystick.py
tbai_ros_g1/src/: G1BeyondMimicController.cpp  G1MimicController.cpp  G1RLController.cpp  G1SpinkickController.cpp  MotionLoader.cpp  deploy_g1_rl.cpp
tbai_ros_gazebo_unitree/: CMakeLists.txt  controller_plugins.xml  package.xml
tbai_ros_gazebo_unitree/include/tbai_ros_gazebo_unitree/: G1GazeboInterface.hpp  UnitreeGazeboInterface.hpp
tbai_ros_gazebo_unitree/launch/: g1_gazebo_unitree.launch  go2_gazebo_unitree.launch  go2w_gazebo_unitree.launch
tbai_ros_gazebo_unitree/src/: G1GazeboInterface.cpp  UnitreeGazeboInterface.cpp
tbai_ros_gazebo_unitree/urdf/: g1_unitree_interface.urdf.xacro  go2_unitree_interface.urdf.xacro  go2w_unitree_interface.urdf.xacro
tbai_ros_gazebo_unitree/worlds/: g1_humanoid.world
tbai_ros_go2w/: CMakeLists.txt  package.xml
tbai_ros_go2w/include/tbai_ros_go2w/: Go2WDreamWaQController.hpp  Go2WStaticController.hpp
tbai_ros_go2w/launch/: go2w_gazebo_drive.launch  go2w_gazebo_handstand.launch  go2w_mujoco_drive.launch  go2w_mujoco_handstand.launch
tbai_ros_go2w/scripts/: go2w_virtual_joystick.py
tbai_ros_go2w/src/: Go2WDreamWaQController.cpp  deploy_go2w_dreamwaq.cpp
tbai_ros_mpc/: CMakeLists.txt  README.md  package.xml
tbai_ros_mpc/config/anymal_b/blind/: controllers.info  default_config_anymal_b.yaml  task.info
tbai_ros_mpc/config/anymal_c/blind/: task.info
tbai_ros_mpc/config/anymal_d/blind/: task.info
tbai_ros_mpc/config/anymal_d/perceptive/: task.info
tbai_ros_mpc/config/franka/: default_config_arm.yaml  default_config_franka.yaml
tbai_ros_mpc/config/go2/blind/: default_config_go2.yaml  task.info
tbai_ros_mpc/config/go2/perceptive/: default_config.yaml
tbai_ros_mpc/config/spot/blind/: controllers.info  default_config_spot.yaml  task.info
tbai_ros_mpc/config/spot_arm/blind/: controllers.info  default_config_spot.yaml  targetCommand.info  task.info
tbai_ros_mpc/include/tbai_ros_mpc/: MpcController.hpp  QuadrupedMpcNode.h  RosMpcController.hpp
tbai_ros_mpc/include/tbai_ros_mpc/arm_mpc/: ArmMpcController.hpp  InteractiveMarkerTarget.h
tbai_ros_mpc/include/tbai_ros_mpc/franka_mpc/: FrankaDummyVisualization.h  FrankaMpcController.hpp  FrankaVisualizer.h  InteractiveMarkerTarget.h  MobileManipulatorDummyVisualization.h
tbai_ros_mpc/include/tbai_ros_mpc/quadruped_arm_mpc/: RosMpcController.hpp
tbai_ros_mpc/include/tbai_ros_mpc/quadruped_mpc/: RosMpcController.hpp
tbai_ros_mpc/include/tbai_ros_mpc/reference/: GridmapReferenceTrajectoryGenerator.hpp
tbai_ros_mpc/include/tbai_ros_mpc/visualization/: QuadrupedTfPublisher.h  QuadrupedVisualizer.h
tbai_ros_mpc/launch/: anymal_b_blind.launch  anymal_c_blind.launch  anymal_d_blind.launch  anymal_d_perceptive.launch  franka.launch  franka_gazebo.launch  go2_blind.launch  go2_perceptive.launch  spot_arm_blind.launch  spot_arm_gazebo.launch  spot_blind.launch
tbai_ros_mpc/launch/rviz/: robot.rviz
tbai_ros_mpc/rviz/: arm.rviz  franka.rviz
tbai_ros_mpc/src/: MpcNode.cpp  QuadrupedMpcNode.cpp  RosMpcController.cpp  simple_blind.cpp  simple_perceptive.cpp
tbai_ros_mpc/src/arm_mpc/: ArmDummyVisualization.cpp  ArmMpcController.cpp  ArmVisualizer.cpp  InteractiveMarkerTarget.cpp
tbai_ros_mpc/src/franka_mpc/: FrankaDummyMRT.cpp  FrankaDummyVisualization.cpp  FrankaMpcController.cpp  FrankaMpcNode.cpp  FrankaTarget.cpp  FrankaVisualizer.cpp  InteractiveMarkerTarget.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorTarget.cpp  simple_franka_wbc.cpp
tbai_ros_mpc/src/quadruped_arm_mpc/: QuadrupedDummyMRT.cpp  QuadrupedMpcNode.cpp  RosMpcController.cpp
tbai_ros_mpc/src/quadruped_arm_mpc/quadruped_reference/: GridmapReferenceTrajectoryGenerator.cpp
tbai_ros_mpc/src/quadruped_mpc/: QuadrupedDummyMRT.cpp  QuadrupedMpcNode.cpp  RosMpcController.cpp
tbai_ros_mpc/src/quadruped_mpc/quadruped_reference/: GridmapReferenceTrajectoryGenerator.cpp
tbai_ros_mpc/src/quadruped_mpc/utils/: LoadConfig.cpp
tbai_ros_mpc/src/quadruped_mpc/visualization/: QuadrupedTfPublisher.cpp  QuadrupedVisualizer.cpp
tbai_ros_mpc/src/reference/: GridmapReferenceTrajectoryGenerator.cpp
tbai_ros_mpc/src/visualization/: QuadrupedTfPublisher.cpp  QuadrupedVisualizer.cpp  VisualizationColors.cpp  VisualizationHelpers.cpp
tbai_ros_ocs2/: CMakeLists.txt  package.xml
tbai_ros_ocs2/include/tbai_ros_ocs2/: MPC_ROS_Interface.hpp  MRT_ROS_Interface.hpp  RosReferenceManager.hpp
tbai_ros_ocs2/include/tbai_ros_ocs2/common/: GaitMsgConversions.h  RosMsgConversions.h
tbai_ros_ocs2/include/tbai_ros_ocs2/logic/: GaitCommandNode.h  GaitReceiver.h
tbai_ros_ocs2/include/tbai_ros_ocs2/quadruped_interface/: LocalTerrainReceiver.h  (+3 more)
tbai_ros_ocs2/msg/: local_terrain.msg
tbai_ros_ocs2/src/: MPC_ROS_Interface.cpp  MRT_ROS_Interface.cpp  RosMsgConversions.cpp  RosMsgHelpers.cpp  RosReferenceManager.cpp  gait_command_node.cpp
tbai_ros_ocs2/src/common/: GaitMsgConversions.cpp
tbai_ros_ocs2/src/logic/: GaitCommandNode.cpp  GaitReceiver.cpp
tbai_ros_ocs2/src/quadruped_interface/: LocalTerrainReceiver.cpp  SwingPlanningVisualizer.cpp  TerrainPlaneVisualizer.cpp  TerrainReceiver.cpp
tbai_ros_ocs2/src/segmented_planes/: SegmentedPlanesTerrainModel.cpp  SegmentedPlanesTerrainModelRos.cpp
tbai_ros_ocs2/src/terrain/: TerrainPlane.cpp
tbai_ros_ocs2/src/visualization/: VisualizationColors.cpp  VisualizationHelpers.cpp
(+92 files in other folders)
