<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_ocs2</name>
  <version>0.0.0</version>
  <description>ROS-dependent OCS2 interfaces for TBAI</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tbai</depend>
  <depend>convex_plane_decomposition_ros</depend>
  <depend>convex_plane_decomposition</depend>
  <depend>convex_plane_decomposition_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_sdf</depend>
  <depend>grid_map_filters_rsl</depend>
  <depend>segmented_planes_terrain_model</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
